--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "motion": "^12.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
+    "react-use": "^17.6.0",
+    "react-window": "^1.8.11",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
